<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        tools:ignore="NestedWeights" />

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.70"
        android:weightSum="1"
        tools:ignore="NestedWeights">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.2"
            android:text="@string/msh">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.05"
            android:text="@string/username">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.15"
            android:id="@+id/username">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.05"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.15"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.2"
            android:text="@string/login" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        tools:ignore="NestedWeights" />

</LinearLayout>